--- a/Gomez_Valentina_BUS 336_Signature_Term_Project.ipynb
+++ b/Gomez_Valentina_BUS 336_Signature_Term_Project.ipynb
@@ -716,10 +716,12 @@
     "# Task 3: Analyze, interpret, and write about the continuous and categorical variables.\n",
     "\n",
     "# There are 1203 different drink combinations that can be done by starbucks.\n",
+    "# The average calories of a Starbucks drink is 230.83.\n", 
     "# The top product used is White Hot Chocolate with a frequency of being on the list 50 times.\n",
     "# Grande was the most mentioned sized with 345 times.\n",
     "# No Whip was used 910 times throughout the drink combinations.\n",
     "# There are 94 unique product names. \n",
+    "# The average Carbs of a Starbucks drink is 37.59g which would not work for my low carb diet.\n",
     "# There are 7 different sizes on our list."
    ]
   },
